# beekeeper

./: .env.example  .gitignore  .soul.json  AGREEMENT.md  COMPARISON_REPORT.md  Dockerfile  GETTING_STARTED.md  HOW_TO_USE.md  Makefile  README.md  ROADMAP.md  SOUL.md  anmol_noor_report.md  docker-compose.yml  pyproject.toml  rebuild-and-run.sh  research_anmol_noor_github.md
.honeycomb_recovery_drill/: control_plane.db
.queen_core/: README.md
architecture/: 01_overview.md  02_system_diagram.md  03_core_modules.md  04_apis.md  05_data_layer.md  06_infrastructure.md  07_extension_guide.md  08_env_reference.md  09_docker_webui_guide.md  10_status_assessment.md  README.md
beehive/: __init__.py  celery_app.py  channel_allowlist.py  channel_auth.py  channel_mention.py  channels.py  contracts.py  demo.py  demo_autonomy.py  honeycomb.py  llm_provider.py  monitor.py  ops.py  package_installer.py  plugins.py  profiles.py  pulse.py  queen.py  queen_actions.py  queen_context.py  registry.py  runner.py  scheduler.py  sdk.py  security.py  skill_loader.py  soul.py  store.py  temporal_integration.py  temporal_worker.py  user_memory.py  vector_store.py  web_adapters.py  worker.py  worker_registry.py
beekeeper/: .honeycomb  AGENTS.md  BEEKEEPER.md  __init__.py  artifact_store.py  audit_compliance.py  audit_logger.py  autonomy.py  celery_app.py  channel_capabilities.py  channel_pairing.py  channels.py  contracts.py  demo.py  demo_autonomy.py  dispatch_service.py  execution_mode_service.py  guardrails.py  honeycomb.py  idempotency.py  llm_provider.py  mcp_adapter.py  mcp_transport.py  migrate_blueprints.py  monitor.py  notifications.py  ops.py  package_installer.py  personal_mode.py  planner_service.py  plugins.py  policy_service.py  profile_service.py  prompt_templates.py  pulse.py  queen.py  queen_actions.py  queen_context.py  queen_updates.py  (+30 more)
(+137 files in other folders)
